<resources>
    <string name="app_name">PAM_GR1</string>
    <string name="name">Name</string>
    <string name="input_name">Input name</string>
    <string name="surname">Surname</string>
    <string name="input_surname">Input surname</string>
    <string name="subject">Subject</string>
    <string name="input_subject">Input subject</string>
    <string name="average_grade">Average grade</string>
    <string name="input_average_grade">Input average grade</string>
    <string name="result">Result</string>
    <string name="none">none</string>
    <string name="scholarship">Student %1$s %2$s z kierunku %3$s %4$sotrzymał stypendium.</string>
    <string name="first_number">First number</string>
    <string name="input_first_number">Input first number</string>
    <string name="second_number">Second number</string>
    <string name="input_second_number">Input second number</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="input_text">Input text</string>
    <string name="enter_char">Enter char</string>
    <string name="divisor_error">"Cannot divide by 0!"</string>
    <string name="input_operator">Input operator</string>
    <string name="calculate">Calculate</string>
    <string name="invalid_operator">Unknown operator: %1$s</string>
    <string name="show_subject_name">Show subject name</string>
    <string name="credits_title">Credits</string>
    <string name="calculator_title">Calculator</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="class_group">Class</string>
    <string name="input_first_name">Input first name</string>
    <string name="input_class_group">Input class group</string>
    <string name="save_credits">Save credits</string>
    <string name="edit_credits">Edit credits</string>
    <string name="input_last_name">Input last name</string>
</resources>